iptables.conf
# Generated by iptables-save v1.4.21 on Mon Dec  3 14:42:02 2018
*nat
:PREROUTING ACCEPT [3237:249235]
:INPUT ACCEPT [2235:190908]
:OUTPUT ACCEPT [68:5024]
:POSTROUTING ACCEPT [2696:173779]
-A PREROUTING -m set --match-set all src -j RETURN
-A PREROUTING -m set --match-set all dst -j RETURN
-A PREROUTING -m set --match-set weixin dst -m set --match-set Weixin dst -j RETURN
-A PREROUTING -m set --match-set weixin src -m set --match-set Weixin dst -j RETURN
-A PREROUTING -s 172.22.0.0/24 -p tcp -m tcp -m multiport --dports 443 -j DNAT --to-destination 172.22.0.20:443
-A PREROUTING -d 10.154.55.20/32 -p tcp -m tcp --dport 9800 -j RETURN
-A PREROUTING -s 172.22.0.0/24 -p tcp -m tcp -m multiport --dports 80,8080 -j DNAT --to-destination 172.22.0.20:80
#-A PREROUTING -s 172.22.0.0/24 -p tcp -m tcp -j DNAT --to-destination 172.22.0.20:80
COMMIT
# Completed on Mon Dec  3 14:42:02 2018
# Generated by iptables-save v1.4.21 on Mon Dec  3 14:42:02 2018
*filter
:INPUT DROP [350:53031]
:FORWARD DROP [1293:67847]
:OUTPUT ACCEPT [30309:6957773]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2224 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 9800 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -m set --match-set all src -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -m set --match-set all dst -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -m set --match-set weixin src -m state --state RELATED,ESTABLISHED -j ACCEPT
#-A FORWARD -m set --match-set weixin dst -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -p icmp -m icmp --icmp-type 0 -j ACCEPT
#-A FORWARD -m set --match-set weixin src -m set --match-set Weixin dst -m state --state NEW -j ACCEPT
-A FORWARD -m set --match-set weixin src -m set --match-set Weixin dst -j ACCEPT
-A FORWARD -m set --match-set weixin dst -j ACCEPT
#-A FORWARD -m set --match-set all src -m state --state NEW -j ACCEPT
-A FORWARD -m set --match-set all src -j ACCEPT
-A FORWARD -m set --match-set all dst -j ACCEPT
COMMIT
# Completed on Mon Dec  3 14:42:02 2018
